load("erlang_version.bzl", "erlang_version")
load("erlang_home.bzl", "erlang_home")
load("elixir_home.bzl", "elixir_home", "mix_archives")

exports_files([
    "app_file.template",
    "app_with_mod_file.template",
])

erlang_version(
    name = "erlang_version",
    build_setting_default = "23.1",
    visibility = ["//visibility:public"],
)

# This allows us to
# `bazel build //my/target \
#    --//bazel_erlang:erlang_home=/path/to/erlang/installation`
erlang_home(
    name = "erlang_home",
    build_setting_default = "~/kerl/23.1",
    visibility = ["//visibility:public"],
)

# This allows us to
# `bazel build //my/target \
#    --//bazel_erlang:elixir_home=/path/to/elixir/installation`
elixir_home(
    name = "elixir_home",
    build_setting_default = "~/.kiex/elixirs/elixir-1.10.4",
    visibility = ["//visibility:public"],
)

mix_archives(
    name = "mix_archives",
    build_setting_default = "~/.kiex/mix/archives/elixir-1.10.4",
    visibility = ["//visibility:public"],
)
