[package]
name = "rabbitmq-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Erlang distribution protocol
erl_dist = "0.6"
# Erlang RPC client
erl_rpc = "0.3"
# Command line parsing
clap = { version = "4.4", features = ["derive", "env"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Terminal handling
crossterm = "0.27"
# HTTP client for WebSocket support (future)
reqwest = { version = "0.11", features = ["json"], optional = true }
# Process and system info
sysinfo = "0.30"
# Hostname detection
hostname = "0.3"
# Directory utilities  
dirs = "5.0"

[features]
default = ["erl-dist"]
erl-dist = []
websocket = ["reqwest"]

[[bin]]
name = "rabbitmq"
path = "src/main.rs"