load("//:rabbitmq.bzl", "all_plugins")
load(":erlang_ls.bzl", "erlang_ls_config", "erlang_ls_tree")

erlang_ls_tree(
    name = "erlang_ls_files",
    apps = all_plugins(
        rabbitmq_workspace = "",
    ) + [
        "//deps/rabbitmq_ct_helpers:erlang_app",
        "//deps/rabbitmq_ct_client_helpers:erlang_app",
    ],
)

erlang_ls_config(
    name = "erlang_ls.config",
)
