load("//:rabbitmq.bzl", "all_plugins")
load(":erlang_ls.bzl", "deps_symlinks", "erlang_ls_config")

erlang_ls_config(
    name = "erlang_ls.config",
)

deps_symlinks(
    name = "symlink_deps_for_erlang_ls",
    apps = all_plugins(
        rabbitmq_workspace = "",
    ) + [
        "//deps/rabbitmq_ct_helpers:erlang_app",
        "//deps/rabbitmq_ct_client_helpers:erlang_app",
    ],
    dest = "extra_deps",  # must also be listed in .bazelignore
    tags = ["local"],
)
