load("//:rabbitmq.bzl", "all_plugins")
load(":erlang_ls.bzl", "deps_symlinks")

deps_symlinks(
    name = "symlink_deps_for_erlang_ls",
    testonly = True,
    apps = all_plugins(
        rabbitmq_workspace = "",
    ) + [
        "//deps/rabbitmq_ct_helpers:erlang_app",
        "//deps/rabbitmq_ct_client_helpers:erlang_app",
    ],
    dest = "extra_deps",  # must also be listed in .bazelignore
    tags = ["local"],
)
