load("@bazel-erlang//:xref.bzl", "xref")
load("@bazel-erlang//:dialyze.bzl", "dialyze")
load(
    "//:rabbitmq.bzl",
    "RABBITMQ_DIALYZER_OPTS",
    "assert_suites",
    "broker_for_integration_suites",
    "rabbitmq_integration_suite",
    "rabbitmq_lib",
    "rabbitmq_suite",
)

APP_ENV = """[
	    {cache_ttl,      15000},
	    {cache_module,   rabbit_auth_cache_ets},
	    {cache_module_args, []},
	    {cached_backend, rabbit_auth_backend_internal},
	    {cache_refusals, false}
	  ]"""

APP_NAME = "rabbitmq_auth_backend_cache"

APP_DESCRIPTION = "RabbitMQ Authentication Backend cache"

APP_MODULE = "rabbit_auth_backend_cache_app"

DEPS = [
    "//apps/rabbit_common:bazel_erlang_lib",
]

RUNTIME_DEPS = [
    "//apps/rabbit:bazel_erlang_lib",
]

FIRST_SRCS = [
    "src/rabbit_auth_cache.erl",
]

rabbitmq_lib(
    app_description = APP_DESCRIPTION,
    app_env = APP_ENV,
    app_module = APP_MODULE,
    app_name = APP_NAME,
    first_srcs = FIRST_SRCS,
    runtime_deps = RUNTIME_DEPS,
    deps = DEPS,
)

xref(tags = ["xref"])

dialyze(
    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
    plt = "//:base_plt",
    tags = ["dialyze"],
)

broker_for_integration_suites()

PACKAGE = "apps/rabbitmq_auth_backend_cache"

suites = [
    rabbitmq_integration_suite(
        PACKAGE,
        name = "config_schema_SUITE",
    ),
    rabbitmq_integration_suite(
        PACKAGE,
        name = "rabbit_auth_backend_cache_SUITE",
    ),
    rabbitmq_suite(
        name = "rabbit_auth_cache_SUITE",
        runtime_deps = [
            "@rabbitmq_ct_helpers//:bazel_erlang_lib",
        ],
    ),
]

assert_suites(
    suites,
    glob(["test/**/*_SUITE.erl"]),
)
