load("@bazel-erlang//:eunit.bzl", "eunit")
load("@bazel-erlang//:xref.bzl", "xref")
load("@bazel-erlang//:dialyze.bzl", "dialyze", "plt")
load("//:rabbitmq.bzl", "RABBITMQ_TEST_ERLC_OPTS", "rabbitmq_lib")

APP_NAME = "rabbitmq_aws"

APP_DESCRIPTION = "A minimalistic AWS API interface used by rabbitmq-autocluster (3.6.x) and other RabbitMQ plugins"

APP_MODULE = "rabbitmq_aws_app"

APP_REGISTERED = [
    "rabbitmq_aws",
]

EXTRA_APPS = [
    "crypto",
    "inets",
    "ssl",
    "xmerl",
]

BUILD_DEPS = [
    "//apps/rabbit_common:bazel_erlang_lib",
]

rabbitmq_lib(
    app_description = APP_DESCRIPTION,
    app_module = APP_MODULE,
    app_name = APP_NAME,
    app_registered = APP_REGISTERED,
    build_deps = BUILD_DEPS,
    extra_apps = EXTRA_APPS,
)

xref(
    additional_libs = [
        "//apps/rabbit_common:bazel_erlang_lib",
        "@credentials_obfuscation//:bazel_erlang_lib",
        "@jsx//:bazel_erlang_lib",
        "@recon//:bazel_erlang_lib",
    ],
    tags = ["xref"],
)

plt(
    name = "base_plt",
    apps = EXTRA_APPS,
    plt = "//:base_plt",
)

dialyze(
    plt = ":base_plt",
    tags = ["dialyze"],
)

eunit(
    erlc_opts = RABBITMQ_TEST_ERLC_OPTS + [
        "-I apps/rabbitmq_aws",
        "+nowarn_export_all",
    ],
    runtime_deps = [
        "//apps/rabbit_common:bazel_erlang_lib",
        "@meck//:bazel_erlang_lib",
    ],
)
